# Syntax-5.1

./: README.md
Flask Api/: main.py  pyproject.toml  spotify.py
Website/: README.txt  package-lock.json  package.json
Website/public/: index.html
Website/src/: App.js  index.js
Website/src/components/: Navbar.js
Website/src/hooks/: useFetch.js
Website/src/pages/: 404.js  Home.js  Mashup.js  Player.js  Search.js
Website/src/static/css/: index.css  navbar.css  player.css  search.css
