[tool.poetry]
name = "repl_python3_Music"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
bs4 = "^0.0.1"
youtube_dl = "^2021.12.17"
Flask-Cors = "^3.0.10"
pafy = "^0.5.5"
requests = "^2.26.0"
b64 = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
